# supervisors.rs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Cargo.toml  README.md  README.rst  ROADMAP.md  pyproject.toml
.github/workflows/: CI.yml  changelog.yml
docs/: Makefile  requirements.txt
docs/source/: agents.rst  conf.py  config.py  extensions.rst  index.rst  quickstart.rst
examples/a2a/: README.md  main.py  pyproject.toml
examples/a2a_plan_todo/: .env.example  README.md  main.py  pyproject.toml
examples/composite/: README.md  main.py
examples/loop/: README.md  main.py
examples/multi_agent/: README.md  main.py
examples/pipeline/: README.md  main.py
examples/supervisor_subagent/: README.md  main.py
src/: lib.rs
src/supervisor/: __init__.py  __main__.py  _core.pyi  agent.py  async_agent.py  cli.py  config.py  human_loop.py  knowledge.py  llm_agent.py  loop_agent.py  memory.py  multi_agent.py  patterns.py  pipeline.py  prompt.py  server.py  state.py  supervisor_agent.py  typed_message.py
src/supervisor/ext/: __init__.py  a2a.py  function_calling.py  mcp.py  rag.py  skills.py
src/supervisor/graph/: __init__.py  builder.py  edge.py  engine.py  node.py
src/supervisor/llm/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  bedrock_provider.py  ollama_provider.py  openai_provider.py
src/supervisor/tools/: __init__.py  base.py  calculator.py  code_executor.py  database.py  file_io.py  http_client.py  integrations.py  registry.py  web_search.py
src/supervisors/: __main__.py  _core.pyi  agent.py  loop_agent.py  multi_agent.py  pipeline.py  supervisor_agent.py
src/supervisors/ext/: __init__.py  a2a.py  function_calling.py  mcp.py  rag.py  skills.py
tests/: test_agent.py  test_agent_types.py  test_async.py  test_graph.py  test_integrations.py  test_llm.py  test_llm_agent.py  test_memory.py  test_patterns.py  test_prompt.py  test_pyo3.py  test_state.py  test_tools.py  test_typed_message.py
